--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Igor Ristrutturazioni - Servizi professionali di ristrutturazione, pittura e rinnovazione interni a Treviso e provincia. Qualità garantita.">
     <title>Igor Ristrutturazioni | Rinnovazione Interni Treviso</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
     <!-- Google Fonts - Poppins + Playfair Display per titoli -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
