--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta name="robots" content="index, follow">
     <meta name="geo.region" content="IT-TV">
     <meta name="geo.placename" content="Treviso">
-    <link rel="canonical" href="https://www.casabon.it/">
+    <link rel="canonical" href="https://casabon.netlify.app/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.casabon.it/">
+    <meta property="og:url" content="https://casabon.netlify.app/">
     <meta property="og:title" content="Ristrutturazioni Treviso, Mestre e Venezia | Casabon Ristrutturazioni">
     <meta property="og:description" content="Ristrutturazioni a Treviso, Mestre e Venezia. Servizi di pittura, ristrutturazione bagni, cucine, appartamenti. Preventivi gratuiti. 15+ anni di esperienza.">
-    <meta property="og:image" content="https://www.casabon.it/images/og-image.jpg">
+    <meta property="og:image" content="https://casabon.netlify.app/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
     <meta property="og:site_name" content="Casabon Ristrutturazioni">
 
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ristrutturazioni Treviso, Mestre e Venezia | Casabon Ristrutturazioni">
     <meta name="twitter:description" content="Ristrutturazioni a Treviso, Mestre e Venezia. Pittura, bagni, cucine, appartamenti. Preventivi gratuiti.">
-    <meta name="twitter:image" content="https://www.casabon.it/images/og-image.jpg">
+    <meta name="twitter:image" content="https://casabon.netlify.app/images/og-image.jpg">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
@@ -54,7 +54,7 @@
         "@type": "HomeAndConstructionBusiness",
         "name": "Casabon Ristrutturazioni",
         "description": "Impresa di ristrutturazioni a Treviso, Mestre e Venezia specializzata in pittura, ristrutturazione bagni, cucine, appartamenti e rinnovazione interni.",
-        "url": "https://www.casabon.it",
+        "url": "https://casabon.netlify.app",
         "telephone": "+39 327 410 5610",
         "email": "info@casabon.it",
         "address": {
@@ -168,8 +168,8 @@
             "https://www.facebook.com/casabon",
             "https://www.instagram.com/casabon"
         ],
-        "image": "https://www.casabon.it/images/og-image.jpg",
-        "logo": "https://www.casabon.it/favicon.svg"
+        "image": "https://casabon.netlify.app/images/og-image.jpg",
+        "logo": "https://casabon.netlify.app/favicon.svg"
     }
     </script>
 
@@ -236,10 +236,10 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Casabon Ristrutturazioni",
-        "url": "https://www.casabon.it/",
+        "url": "https://casabon.netlify.app/",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://www.casabon.it/?s={search_term_string}",
+            "target": "https://casabon.netlify.app/?s={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
@@ -253,32 +253,32 @@
             {
                 "@type": "SiteNavigationElement",
                 "name": "Home",
-                "url": "https://www.casabon.it/#home"
+                "url": "https://casabon.netlify.app/#home"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Chi Siamo",
-                "url": "https://www.casabon.it/#chi-siamo"
+                "url": "https://casabon.netlify.app/#chi-siamo"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Servizi",
-                "url": "https://www.casabon.it/#servizi"
+                "url": "https://casabon.netlify.app/#servizi"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Perché Noi",
-                "url": "https://www.casabon.it/#perche-noi"
+                "url": "https://casabon.netlify.app/#perche-noi"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Recensioni",
-                "url": "https://www.casabon.it/#recensioni"
+                "url": "https://casabon.netlify.app/#recensioni"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Contatti",
-                "url": "https://www.casabon.it/#contatti"
+                "url": "https://casabon.netlify.app/#contatti"
             }
         ]
     }
