--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta name="geo.region" content="IT-TV">
     <meta name="geo.placename" content="Treviso">
     <link rel="canonical" href="https://casabon.netlify.app/">
-
+    <!-- iubenda privacy policy -->
+    <script type="text/javascript" src="https://embeds.iubenda.com/widgets/0295c41b-9938-4eb1-b105-1538c4b7f811.js"></script>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://casabon.netlify.app/">
@@ -1083,6 +1084,7 @@
                             <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                             <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
+                        
                     </div>
                     <div class="footer-links">
                         <h4>Link Utili</h4>
@@ -1119,6 +1121,9 @@
                                 <i class="fas fa-map-marker-alt"></i>
                                 <span>Treviso, Mestre e Venezia</span>
                             </li>
+                            <li> 
+                                <a href="https://www.iubenda.com/privacy-policy/14816223" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script><a href="https://www.iubenda.com/privacy-policy/14816223/cookie-policy" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -1126,7 +1131,7 @@
         </div>
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2024 Casabon Ristrutturazioni. Tutti i diritti riservati. | P.IVA: 01234567890</p>
+                <p>&copy; 2024 Casabon Ristrutturazioni. Tutti i diritti riservati. | P.IVA: 01234567890</p> 
             </div>
         </div>
     </footer>
