aggiornato footer diritti

--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@
         </div>
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2024 Casabon Ristrutturazioni. Tutti i diritti riservati. | P.IVA: 01234567890</p> 
+                <p>&copy; 2026 Casabon.it diritti riservati. | P.IVA: 01234567890</p> 
             </div>
         </div>
     </footer>
