aggiornato privacy policy

--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
                         </div>
                         <div class="form-group checkbox-group">
                             <input type="checkbox" id="privacy" name="privacy" required>
-                            <label for="privacy">Accetto il trattamento dei dati personali secondo la <a href="#">Privacy Policy</a></label>
+                            <label for="privacy">Accetto il trattamento dei dati personali secondo la <a href="https://www.iubenda.com/privacy-policy/14816223" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe" title="Privacy Policy" target="_blank">Privacy Policy</a></label>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">
                             <span>Invia Richiesta</span>
@@ -1121,8 +1121,10 @@
                                 <i class="fas fa-map-marker-alt"></i>
                                 <span>Treviso, Mestre e Venezia</span>
                             </li>
-                            <li> 
-                                <a href="https://www.iubenda.com/privacy-policy/14816223" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script><a href="https://www.iubenda.com/privacy-policy/14816223/cookie-policy" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+                            <li>
+                                <a href="https://www.iubenda.com/privacy-policy/14816223" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe" title="Privacy Policy">Privacy Policy</a>
+                                <span style="margin: 0 8px;">|</span>
+                                <a href="https://www.iubenda.com/privacy-policy/14816223/cookie-policy" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe" title="Cookie Policy">Cookie Policy</a>
                             </li>
                         </ul>
                     </div>
