--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     <style>
         .preloader{position:fixed;top:0;left:0;width:100%;height:100%;background:#1a1a2e;display:flex;align-items:center;justify-content:center;z-index:9999}
         .navbar{position:fixed;top:0;left:0;width:100%;z-index:1000;padding:20px 0;transition:all .3s ease}
-        .hero{min-height:100vh;display:flex;align-items:center;background:#1a1a2e}
+        .hero{min-height:100vh;display:flex;align-items:center;background:url('images/work/hero.webp') center/cover no-repeat}
         body{font-family:'Poppins',sans-serif;margin:0;padding:0}
     </style>
 </head>
@@ -567,7 +567,7 @@
                             <img src="images/work/3.webp" alt="Ristrutturazione completa appartamento Treviso Centro" width="400" height="300" loading="lazy">
                             <div class="portfolio-overlay">
                                 <span class="portfolio-category">Ristrutturazione Completa</span>
-                                <h4>Appartamento Rinnovato</h4>
+                                <h4>Bagno Rinnovato</h4>
                                 <p>Treviso Centro</p>
                             </div>
                         </div>
@@ -576,10 +576,10 @@
                     <!-- Slide 2 -->
                     <div class="portfolio-slide">
                         <div class="portfolio-image">
-                            <img src="images/work/4.webp" alt="Lavori di pittura interni Mogliano Veneto" width="400" height="300" loading="lazy">
+                            <img src="images/work/4.webp" alt="Lavori di posa piastrelle sulle pareti Mogliano Veneto" width="400" height="300" loading="lazy">
                             <div class="portfolio-overlay">
-                                <span class="portfolio-category">Pittura</span>
-                                <h4>Pittura Interni</h4>
+                                <span class="portfolio-category">Rinnovazione</span>
+                                <h4>Piastrelle a parete</h4>
                                 <p>Mogliano Veneto</p>
                             </div>
                         </div>
@@ -591,7 +591,7 @@
                             <img src="images/work/5.webp" alt="Rinnovazione interni moderni Mestre" width="400" height="300" loading="lazy">
                             <div class="portfolio-overlay">
                                 <span class="portfolio-category">Rinnovazione</span>
-                                <h4>Interni Moderni</h4>
+                                <h4>Bagno</h4>
                                 <p>Mestre</p>
                             </div>
                         </div>
@@ -602,8 +602,8 @@
                         <div class="portfolio-image">
                             <img src="images/work/6.webp" alt="Ristrutturazione bagno design Venezia" width="400" height="300" loading="lazy">
                             <div class="portfolio-overlay">
-                                <span class="portfolio-category">Bagno</span>
-                                <h4>Bagno di Design</h4>
+                                <span class="portfolio-category">Ristrutturazione</span>
+                                <h4>Interni Moderni</h4>
                                 <p>Venezia</p>
                             </div>
                         </div>
@@ -636,10 +636,10 @@
                     <!-- Slide 7 -->
                     <div class="portfolio-slide">
                         <div class="portfolio-image">
-                            <img src="images/work/9.webp" alt="Rinnovazione cucina moderna Marghera" width="400" height="300" loading="lazy">
+                            <img src="images/work/9.webp" alt="Pittura decorativa Preganziol" width="400" height="300" loading="lazy">
                             <div class="portfolio-overlay">
-                                <span class="portfolio-category">Cucina</span>
-                                <h4>Cucina Moderna</h4>
+                                <span class="portfolio-category">Pittura</span>
+                                <h4>Pittura decorativa </h4>
                                 <p>Marghera</p>
                             </div>
                         </div>
@@ -660,10 +660,10 @@
                     <!-- Slide 9 -->
                     <div class="portfolio-slide">
                         <div class="portfolio-image">
-                            <img src="images/work/11.webp" alt="Ristrutturazione interni totale Silea" width="400" height="300" loading="lazy">
+                            <img src="images/work/11.webp" alt="Pittura decorativa Silea" width="400" height="300" loading="lazy">
                             <div class="portfolio-overlay">
-                                <span class="portfolio-category">Interni</span>
-                                <h4>Rinnovazione Totale</h4>
+                                <span class="portfolio-category">Pittura</span>
+                                <h4>Pittura decorativa</h4>
                                 <p>Silea</p>
                             </div>
                         </div>
@@ -684,11 +684,11 @@
                     <!-- Slide 11 -->
                     <div class="portfolio-slide">
                         <div class="portfolio-image">
-                            <img src="images/work/13.webp" alt="Bagno moderno Villorba" width="400" height="300" loading="lazy">
+                            <img src="images/work/13.webp" alt="Lavori di ristrutturazione Favaro Veneto" width="400" height="300" loading="lazy">
                             <div class="portfolio-overlay">
-                                <span class="portfolio-category">Bagno</span>
-                                <h4>Bagno Moderno</h4>
-                                <p>Villorba</p>
+                                <span class="portfolio-category">Esterni</span>
+                                <h4>Pittura Esterna</h4>
+                                <p>Favaro Veneto</p>
                             </div>
                         </div>
                     </div>
@@ -696,10 +696,10 @@
                     <!-- Slide 12 -->
                     <div class="portfolio-slide">
                         <div class="portfolio-image">
-                            <img src="images/work/14.webp" alt="Imbiancatura professionale Favaro Veneto" width="400" height="300" loading="lazy">
+                            <img src="images/work/14.webp" alt="Lavori di ristrutturazione Favaro Veneto" width="400" height="300" loading="lazy">
                             <div class="portfolio-overlay">
-                                <span class="portfolio-category">Imbiancatura</span>
-                                <h4>Imbiancatura Professionale</h4>
+                                <span class="portfolio-category">Esterni</span>
+                                <h4>Ristrutturazione Esterna</h4>
                                 <p>Favaro Veneto</p>
                             </div>
                         </div>
@@ -708,11 +708,11 @@
                     <!-- Slide 13 -->
                     <div class="portfolio-slide">
                         <div class="portfolio-image">
-                            <img src="images/work/15.webp" alt="Ristrutturazione casa Paese Treviso" width="400" height="300" loading="lazy">
+                            <img src="images/work/15.webp" alt="Lavori di ristrutturazione Favaro Veneto" width="400" height="300" loading="lazy">
                             <div class="portfolio-overlay">
-                                <span class="portfolio-category">Casa</span>
-                                <h4>Ristrutturazione Casa</h4>
-                                <p>Paese</p>
+                                <span class="portfolio-category">Esterni</span>
+                                <h4>Ristrutturazione Esterni</h4>
+                                <p>Favaro Veneto</p>
                             </div>
                         </div>
                     </div>
@@ -720,11 +720,11 @@
                     <!-- Slide 14 -->
                     <div class="portfolio-slide">
                         <div class="portfolio-image">
-                            <img src="images/work/16.webp" alt="Lavori completati Quinto di Treviso" width="400" height="300" loading="lazy">
+                            <img src="images/work/16.webp" alt="Pittura porte Favaro Veneto" width="400" height="300" loading="lazy">
                             <div class="portfolio-overlay">
-                                <span class="portfolio-category">Progetto</span>
-                                <h4>Lavoro Completato</h4>
-                                <p>Quinto di Treviso</p>
+                                <span class="portfolio-category">Pittura</span>
+                                <h4>Pittura esterni</h4>
+                                <p>Favaro Veneto</p>
                             </div>
                         </div>
                     </div>
